<?xml version="1.0"?>
<package>
  <name>image_numbered_msgs</name>
  <version>0.13.4</version>
  <description>Messages related to the Flir camera driver.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pointgrey_camera_driver</url>

  <author>Rik Bähnemann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <export></export>
</package>
